Fixed the alignment issue in mobile View and also fixed TabIndex issue for Tab Selection

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --fontcolor: rgba(255, 255, 255, 0.87);
   --fontsize: 20px;
   --fontsize-xs: 15px;
+  --fontsize-xss: 12px;
   --background-color: #242424;
   --fontfamily: 'SF Mono','Fira Code','Fira Mono','Roboto Mono',monospace;
   --font-sans:'Calibre','Inter','San Francisco','SF Pro Text',-apple-system,system-ui,sans-serif;
@@ -12,11 +13,12 @@
   --backgroundhover: #323232;
   --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
   --borderradius: 4px;
-  --hovercolor: #00ff14;
+  --hovercolor: #0077ff;
   --tabactivecolor: rgba(51, 51, 51, 0.87);
   --tab-height: 42px;
   --mobilefont: 18px;
   --headingweight: 800px;
+  --tab-width: 220px;
 }
 *, ::before, ::after {
   box-sizing: inherit;
@@ -25,21 +27,14 @@
 body {
   background-color: var(--background-color);
   margin: 0;
+  overflow-x: hidden;
 }
 
-svg {
-  width: 50px;
-  height: 35px;
-}
-.border {
-  fill: none;
-  stroke: var(--fontcolor);
-  stroke-width: 4;
-  rx: 10;
-  ry: 10;
-}
-.letter-j {
-  fill:  var(--fontcolor);
+h1, h2, h3, h4, h5, h6 {
+  margin: 0px 0px 10px;
+  font-weight: 700;
+  color: var(--fontcolor);
+  line-height: 1.4;
 }
 
 header{
@@ -114,10 +109,7 @@ a {
   display: none;
 }
 
-main {
-  max-width: 1440px;
-  margin: 0 auto;
-}
+
 #main{
   display: flex;
   margin-inline: 40px;
@@ -353,7 +345,6 @@ line-height: 1.4;
 
 .ExperienceContent {
   font-family: var(--font-sans);
-  max-width: 900px;
   margin-left: 80px;
 }
 .ExperienceContent ul {
@@ -366,6 +357,7 @@ line-height: 1.4;
     position: relative;
     margin-bottom: 10px;
     padding-left: 20px;
+    text-align: start;
     font-family: var(--fontfamily);
     font-size: 15px;
 }
@@ -439,7 +431,6 @@ line-height: 1.4;
 
 .EducationContent {
   font-family: var(--font-sans);
-  max-width: 900px;
   margin-left: 80px;
 }
 .EducationContent ul {
@@ -452,6 +443,7 @@ line-height: 1.4;
     position: relative;
     margin-bottom: 10px;
     padding-left: 20px;
+    text-align: start;
     font-family: var(--fontfamily);
     font-size: 15px;
 }
@@ -474,7 +466,6 @@ line-height: 1.4;
 }
 .EducationMenu {
   position: relative;
-  bottom: 0px;
   z-index: 3;
   width: max-content;
   padding: 0px;
@@ -540,19 +531,20 @@ line-height: 1.4;
 
 .sectionheading {
   font-family: var(--font-sans);
-  font-size: clamp(20px, 4vw, 25px);
+  font-size: clamp(20px, 4vw, 23px);
 }
 .sectionheading {
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: nowrap;
 }
 .sectionheading::after {
   content: "";
     display: block;
     position: relative;
     top: 4px;
-    width: 300px;
+    width: 400px;
     flex-shrink: 0;
     height: 1px;
     margin-left: 20px;
@@ -565,7 +557,6 @@ line-height: 1.4;
 }
 .AboutInnerSection p {
   margin: 20px 0px 0px;
-  max-width: 650px;
   font-family: var(--font-sans);
   color: var(--paragraphfont);
   line-height: 2.1;
@@ -640,9 +631,64 @@ footer p {
 footer .lottie {
   margin-top: -15px;
 }
+.ProjectIcon{
+  position: relative;
+  z-index: -1;
+}
+.main-Container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0px 40px 0px 40px;
+}
 @media screen and (max-width: 768px) {
   .header_menuicon {
     display: block;
+  }
+  .Projects .projects-container {
+    grid-template-columns: none;
+    grid-template-rows: none;
+  }
+  .Educationinner, .Experienceinner{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+  }
+  .EducationMenu, .ExperienceMenu {
+    display: flex;
+    overflow-x: auto !important;
+    justify-content: flex-start;
+    align-items: center;
+    width: calc(100% + 100px);
+    padding-left: 50px;
+    margin-left: -50px;
+    margin-bottom: 30px;
+  }
+  .EducationMenu .EducationTabIndex, .ExperienceMenu .TabIndex {
+      top: auto;
+      bottom: 0px;
+      width: 100%;
+      max-width: var(--tab-width);
+      height: 2px;
+      margin-left: 40px;
+      border-left: 0px;
+      transform: translateX(calc(0 * var(--tab-width)));
+  }
+
+  .EducationMenu button, .ExperienceMenu button {
+    display: flex;
+    -moz-box-pack: center;
+    justify-content: center;
+    -moz-box-align: center;
+    align-items: center;
+    max-width: 190px;
+    padding: 0px 15px;
+    border-left: 0px;
+    font-size: var(--fontsize-xss);
+    border-bottom: 2px solid var(--fontcolor);
+    text-align: center;
+  }
+  .EducationContent, .ExperienceContent {
+    margin-left: 0px;
   }
   section {
     padding: 120px 0px;
@@ -656,7 +702,6 @@ footer .lottie {
   .AboutInnerSection .Profile_Image {
     margin: 0px 0px 0px 0px;
     border-radius: var(--borderradius);
-    width: 300px;
   }
   .header_menucontent {
     display: flex;
@@ -728,21 +773,11 @@ footer .lottie {
     font-family: var(--font-sans);
     font-size: clamp(37px, 1vw, 30px);
   }
-  .Aboutheading::after {
-    width: 200px;
+  main-Container {
+    padding: 0px 40px 0px 40px;
   }
 }
 
-@media  screen and (max-width: 600px) {
-    .Experienceinner {
-        display: flex;
-        overflow-x: auto;
-        width: calc(100% + 100px);
-        padding-left: 50px;
-        margin-left: -50px;
-        margin-bottom: 30px;
-    }
-}
 
 
 @media  screen and (min-width: 769px) {
@@ -751,10 +786,27 @@ footer .lottie {
   }
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0px 0px 10px;
-  font-weight: 700;
-  color: var(--fontcolor);
-  line-height: 1.4;
+@media screen and (max-width: 375px) {
+  .intro-1 {
+    font-size: 13px;
+  }
+  .heading1 {
+    font-size: clamp(25px, 3vw, 20px);
+  }
+  .accounts {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .main-Container {
+    padding: 0px 40px 0px 40px;
+  }
+  .ContactTitle {
+    font-size: clamp(30px, 5vw, 60px);
+  }
+  footer p {
+    font-family: var(--fontfamily);
+    font-size: 10px;
+  }
 }
+
